(library (name ReLocalStorageTest) (public_name re-local-storage.test)
    (modules (:standard \ ReLocalStorageTestPesyModules))
    (libraries re-local-storage.test.pesy-modules)
    (flags -linkall -g -w -9 -open ReLocalStorageTestPesyModules)
    (preprocess (pps lwt_ppx)))
(library (public_name re-local-storage.test.pesy-modules)
    (name ReLocalStorageTestPesyModules)
    (modules ReLocalStorageTestPesyModules)
    (libraries re-local-storage.library rely.lib))
(rule
    (with-stdout-to ReLocalStorageTestPesyModules.re
        (run echo
             "module Library = ReLocalStorageLibrary;\
            \nmodule Rely = Rely;")))
